<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <include
        android:id="@+id/toolbar_user_profile_activity"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_save_profile"
        android:layout_below="@id/toolbar_user_profile_activity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_avatar_edit"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="16dp"
                    android:onClick="pickUserAvatar"
                    android:src="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/image_view"
                    android:onClick="pickUserAvatar"
                    app:srcCompat="@drawable/ic_edit" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextSectionHeader"
                android:text="@string/user_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_user_name"
                style="@style/EditTextBordered"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/user_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextSectionHeader"
                android:text="@string/institute_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_institute_name"
                style="@style/EditTextBordered"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/institute_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextSectionHeader"
                android:text="@string/app_theme" />

            <RadioGroup
                android:id="@+id/app_theme_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/theme_light_green"
                    style="@style/RadioButtonThemeChooser"
                    android:background="@drawable/light_green_bg"
                    android:checked="true"
                    android:text="@string/light_green" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/theme_dark_red"
                    style="@style/RadioButtonThemeChooser"
                    android:background="@drawable/dark_pink_bg"
                    android:text="@string/dark_pink" />

            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/solid_background"
        android:onClick="saveChanges"
        android:text="@string/save_changes"
        android:textColor="#FFF" />

</RelativeLayout>