<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".JobsBankQuesActivities.uttara_bank_ques_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:padding="10dp"
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="32dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="32dp"
                        android:src="@drawable/uattara_bank"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uttara_bank_2017"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"

                        />

                </LinearLayout>



            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:padding="10dp"
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="32dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="32dp"
                        android:src="@drawable/uattara_bank"
                        />
                    <TextView


                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uttara_bank_ao_cash_2017"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"

                        />

                </LinearLayout>



            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:padding="10dp"
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="32dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="32dp"
                        android:src="@drawable/uattara_bank"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uttara_bank_pbo_2017"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"

                        />

                </LinearLayout>



            </androidx.cardview.widget.CardView>







        </LinearLayout>



    </LinearLayout>
</ScrollView>